src/TexFormulaCompiler/TexParser.fsyacc.output
Output file describing compiled parser placed in ..\..\..\TexFormulaCompiler\TexParser.fs and ..\..\..\TexFormulaCompiler\TexParser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'EOF' (noprec):   error
    action 'PI' (explicit left 9991):   shift 6
    action 'EULERNUM' (explicit left 9991):   shift 7
    action 'FRAC' (noprec):   shift 22
    action 'SQRT' (noprec):   error
    action 'SUM' (noprec):   shift 10
    action 'PROD' (noprec):   shift 14
    action 'INTEGRAL' (noprec):   shift 28
    action 'TIMES' (noprec):   error
    action 'INFTY' (noprec):   error
    action 'TO' (noprec):   error
    action 'LIM' (noprec):   error
    action 'BMOD' (explicit left 9994):   shift 107
    action 'TEXT' (noprec):   error
    action 'SIN' (noprec):   shift 66
    action 'COS' (noprec):   shift 68
    action 'PLUS' (explicit left 9993):   shift 104
    action 'SUB' (explicit left 9993):   shift 99
    action 'MUL' (explicit left 9994):   shift 105
    action 'DIV' (explicit left 9994):   shift 106
    action 'LPAREN' (explicit right 9990):   shift 51
    action 'RPAREN' (explicit left 9988):   shift 117
    action 'LCURLY' (explicit right 9990):   shift 118
    action 'RCURLY' (explicit left 9988):   shift 119
    action 'EXCL' (noprec):   error
    action 'CARET' (noprec):   error
    action 'EQ' (noprec):   error
    action 'UNDERSCORE' (noprec):   error
    action 'SLASH' (explicit left 9987):   shift 8
    action 'COMMA' (noprec):   error
    action 'MREFVAL' (noprec):   shift 47
    action 'SREFVAL' (noprec):   shift 46
    action 'ID' (explicit left 9992):   shift 63
    action 'DIFF' (noprec):   error
    action 'FLOAT' (explicit left 9991):   shift 49
    action 'INT' (explicit left 9991):   shift 48
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto start: 1
    goto expression: 2
    goto constant: 59
    goto sumPrefix: 11
    goto sum: 55
    goto prodPrefix: 15
    goto prod: 56
    goto fact: 57
    goto power: 60
    goto fracPrefix: 23
    goto frac: 61
    goto integralPrefix: 29
    goto integral: 58
    goto refPattern: 62
    goto refValue: 41
    goto highPriorityFunction: 5
    goto sinPrefix: 69
    goto cosPrefix: 75
    goto trigonometry: 54
    goto binaryExpression: 4
    goto binaryOperator: 100
    goto arguments: 18
    goto parens: 111
    goto errorRule: 64

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'EOF' (noprec):   accept
    action 'PI' (noprec):   accept
    action 'EULERNUM' (noprec):   accept
    action 'FRAC' (noprec):   accept
    action 'SQRT' (noprec):   accept
    action 'SUM' (noprec):   accept
    action 'PROD' (noprec):   accept
    action 'INTEGRAL' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'INFTY' (noprec):   accept
    action 'TO' (noprec):   accept
    action 'LIM' (noprec):   accept
    action 'BMOD' (noprec):   accept
    action 'TEXT' (noprec):   accept
    action 'SIN' (noprec):   accept
    action 'COS' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'SUB' (noprec):   accept
    action 'MUL' (noprec):   accept
    action 'DIV' (noprec):   accept
    action 'LPAREN' (noprec):   accept
    action 'RPAREN' (noprec):   accept
    action 'LCURLY' (noprec):   accept
    action 'RCURLY' (noprec):   accept
    action 'EXCL' (noprec):   accept
    action 'CARET' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'UNDERSCORE' (noprec):   accept
    action 'SLASH' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'MREFVAL' (noprec):   accept
    action 'SREFVAL' (noprec):   accept
    action 'ID' (noprec):   accept
    action 'DIFF' (noprec):   accept
    action 'FLOAT' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> expression . 'EOF'
    binaryExpression -> expression . 'PLUS' expression
    binaryExpression -> expression . 'SUB' expression
    binaryExpression -> expression . 'MUL' expression
    binaryExpression -> expression . 'TIMES' expression
    binaryExpression -> expression . 'DIV' expression
    binaryExpression -> expression . 'BMOD' expression
    binaryExpression -> expression . binaryOperator
    binaryExpression -> expression . recover expression
    binaryExpression -> expression . expr
    errorRule -> expression . parens

  actions:
    action 'EOF' (noprec):   shift 3
    action 'PI' (explicit left 9991):   shift 6
    action 'EULERNUM' (explicit left 9991):   shift 7
    action 'FRAC' (noprec):   shift 22
    action 'SQRT' (noprec):   error
    action 'SUM' (noprec):   shift 10
    action 'PROD' (noprec):   shift 14
    action 'INTEGRAL' (noprec):   shift 28
    action 'TIMES' (explicit left 9994):   shift 96
    action 'INFTY' (noprec):   error
    action 'TO' (noprec):   error
    action 'LIM' (noprec):   error
    action 'BMOD' (explicit left 9994):   shift 98
    action 'TEXT' (noprec):   error
    action 'SIN' (noprec):   shift 66
    action 'COS' (noprec):   shift 68
    action 'PLUS' (explicit left 9993):   shift 93
    action 'SUB' (explicit left 9993):   shift 94
    action 'MUL' (explicit left 9994):   shift 95
    action 'DIV' (explicit left 9994):   shift 97
    action 'LPAREN' (explicit right 9990):   shift 51
    action 'RPAREN' (explicit left 9988):   shift 117
    action 'LCURLY' (explicit right 9990):   shift 118
    action 'RCURLY' (explicit left 9988):   shift 119
    action 'EXCL' (noprec):   error
    action 'CARET' (noprec):   error
    action 'EQ' (noprec):   error
    action 'UNDERSCORE' (noprec):   error
    action 'SLASH' (explicit left 9987):   shift 8
    action 'COMMA' (noprec):   error
    action 'MREFVAL' (noprec):   shift 47
    action 'SREFVAL' (noprec):   shift 46
    action 'ID' (explicit left 9992):   shift 63
    action 'DIFF' (noprec):   error
    action 'FLOAT' (explicit left 9991):   shift 49
    action 'INT' (explicit left 9991):   shift 48
    action 'error' (noprec):   shift 115
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto expression: 92
    goto constant: 59
    goto sumPrefix: 11
    goto sum: 55
    goto prodPrefix: 15
    goto prod: 56
    goto fact: 57
    goto power: 60
    goto fracPrefix: 23
    goto frac: 61
    goto integralPrefix: 29
    goto integral: 58
    goto refPattern: 62
    goto refValue: 41
    goto highPriorityFunction: 5
    goto sinPrefix: 69
    goto cosPrefix: 75
    goto trigonometry: 54
    goto binaryExpression: 4
    goto binaryOperator: 101
    goto arguments: 18
    goto expr: 103
    goto recover: 102
    goto parens: 110
    goto errorRule: 64

state 3:
  items:
    start -> expression 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce start --> expression 'EOF'
    action 'PI' (noprec):   reduce start --> expression 'EOF'
    action 'EULERNUM' (noprec):   reduce start --> expression 'EOF'
    action 'FRAC' (noprec):   reduce start --> expression 'EOF'
    action 'SQRT' (noprec):   reduce start --> expression 'EOF'
    action 'SUM' (noprec):   reduce start --> expression 'EOF'
    action 'PROD' (noprec):   reduce start --> expression 'EOF'
    action 'INTEGRAL' (noprec):   reduce start --> expression 'EOF'
    action 'TIMES' (noprec):   reduce start --> expression 'EOF'
    action 'INFTY' (noprec):   reduce start --> expression 'EOF'
    action 'TO' (noprec):   reduce start --> expression 'EOF'
    action 'LIM' (noprec):   reduce start --> expression 'EOF'
    action 'BMOD' (noprec):   reduce start --> expression 'EOF'
    action 'TEXT' (noprec):   reduce start --> expression 'EOF'
    action 'SIN' (noprec):   reduce start --> expression 'EOF'
    action 'COS' (noprec):   reduce start --> expression 'EOF'
    action 'PLUS' (noprec):   reduce start --> expression 'EOF'
    action 'SUB' (noprec):   reduce start --> expression 'EOF'
    action 'MUL' (noprec):   reduce start --> expression 'EOF'
    action 'DIV' (noprec):   reduce start --> expression 'EOF'
    action 'LPAREN' (noprec):   reduce start --> expression 'EOF'
    action 'RPAREN' (noprec):   reduce start --> expression 'EOF'
    action 'LCURLY' (noprec):   reduce start --> expression 'EOF'
    action 'RCURLY' (noprec):   reduce start --> expression 'EOF'
    action 'EXCL' (noprec):   reduce start --> expression 'EOF'
    action 'CARET' (noprec):   reduce start --> expression 'EOF'
    action 'EQ' (noprec):   reduce start --> expression 'EOF'
    action 'UNDERSCORE' (noprec):   reduce start --> expression 'EOF'
    action 'SLASH' (noprec):   reduce start --> expression 'EOF'
    action 'COMMA' (noprec):   reduce start --> expression 'EOF'
    action 'MREFVAL' (noprec):   reduce start --> expression 'EOF'
    action 'SREFVAL' (noprec):   reduce start --> expression 'EOF'
    action 'ID' (noprec):   reduce start --> expression 'EOF'
    action 'DIFF' (noprec):   reduce start --> expression 'EOF'
    action 'FLOAT' (noprec):   reduce start --> expression 'EOF'
    action 'INT' (noprec):   reduce start --> expression 'EOF'
    action 'error' (noprec):   reduce start --> expression 'EOF'
    action '#' (noprec):   reduce start --> expression 'EOF'
    action '$$' (noprec):   reduce start --> expression 'EOF'

  immediate action:   reduce start --> expression 'EOF'
 gotos:

state 4:
  items:
    expression -> binaryExpression . 

  actions:
    action 'EOF' (noprec):   reduce expression --> binaryExpression
    action 'PI' (noprec):   reduce expression --> binaryExpression
    action 'EULERNUM' (noprec):   reduce expression --> binaryExpression
    action 'FRAC' (noprec):   reduce expression --> binaryExpression
    action 'SQRT' (noprec):   reduce expression --> binaryExpression
    action 'SUM' (noprec):   reduce expression --> binaryExpression
    action 'PROD' (noprec):   reduce expression --> binaryExpression
    action 'INTEGRAL' (noprec):   reduce expression --> binaryExpression
    action 'TIMES' (noprec):   reduce expression --> binaryExpression
    action 'INFTY' (noprec):   reduce expression --> binaryExpression
    action 'TO' (noprec):   reduce expression --> binaryExpression
    action 'LIM' (noprec):   reduce expression --> binaryExpression
    action 'BMOD' (noprec):   reduce expression --> binaryExpression
    action 'TEXT' (noprec):   reduce expression --> binaryExpression
    action 'SIN' (noprec):   reduce expression --> binaryExpression
    action 'COS' (noprec):   reduce expression --> binaryExpression
    action 'PLUS' (noprec):   reduce expression --> binaryExpression
    action 'SUB' (noprec):   reduce expression --> binaryExpression
    action 'MUL' (noprec):   reduce expression --> binaryExpression
    action 'DIV' (noprec):   reduce expression --> binaryExpression
    action 'LPAREN' (noprec):   reduce expression --> binaryExpression
    action 'RPAREN' (noprec):   reduce expression --> binaryExpression
    action 'LCURLY' (noprec):   reduce expression --> binaryExpression
    action 'RCURLY' (noprec):   reduce expression --> binaryExpression
    action 'EXCL' (noprec):   reduce expression --> binaryExpression
    action 'CARET' (noprec):   reduce expression --> binaryExpression
    action 'EQ' (noprec):   reduce expression --> binaryExpression
    action 'UNDERSCORE' (noprec):   reduce expression --> binaryExpression
    action 'SLASH' (noprec):   reduce expression --> binaryExpression
    action 'COMMA' (noprec):   reduce expression --> binaryExpression
    action 'MREFVAL' (noprec):   reduce expression --> binaryExpression
    action 'SREFVAL' (noprec):   reduce expression --> binaryExpression
    action 'ID' (noprec):   reduce expression --> binaryExpression
    action 'DIFF' (noprec):   reduce expression --> binaryExpression
    action 'FLOAT' (noprec):   reduce expression --> binaryExpression
    action 'INT' (noprec):   reduce expression --> binaryExpression
    action 'error' (noprec):   reduce expression --> binaryExpression
    action '#' (noprec):   reduce expression --> binaryExpression
    action '$$' (noprec):   reduce expression --> binaryExpression

  immediate action:   reduce expression --> binaryExpression
 gotos:

state 5:
  items:
    expression -> highPriorityFunction . 
    fact -> highPriorityFunction . 'EXCL'

  actions:
    action 'EOF' (noprec):   reduce expression --> highPriorityFunction
    action 'PI' (noprec):   reduce expression --> highPriorityFunction
    action 'EULERNUM' (noprec):   reduce expression --> highPriorityFunction
    action 'FRAC' (noprec):   reduce expression --> highPriorityFunction
    action 'SQRT' (noprec):   reduce expression --> highPriorityFunction
    action 'SUM' (noprec):   reduce expression --> highPriorityFunction
    action 'PROD' (noprec):   reduce expression --> highPriorityFunction
    action 'INTEGRAL' (noprec):   reduce expression --> highPriorityFunction
    action 'TIMES' (noprec):   reduce expression --> highPriorityFunction
    action 'INFTY' (noprec):   reduce expression --> highPriorityFunction
    action 'TO' (noprec):   reduce expression --> highPriorityFunction
    action 'LIM' (noprec):   reduce expression --> highPriorityFunction
    action 'BMOD' (noprec):   reduce expression --> highPriorityFunction
    action 'TEXT' (noprec):   reduce expression --> highPriorityFunction
    action 'SIN' (noprec):   reduce expression --> highPriorityFunction
    action 'COS' (noprec):   reduce expression --> highPriorityFunction
    action 'PLUS' (noprec):   reduce expression --> highPriorityFunction
    action 'SUB' (noprec):   reduce expression --> highPriorityFunction
    action 'MUL' (noprec):   reduce expression --> highPriorityFunction
    action 'DIV' (noprec):   reduce expression --> highPriorityFunction
    action 'LPAREN' (noprec):   reduce expression --> highPriorityFunction
    action 'RPAREN' (noprec):   reduce expression --> highPriorityFunction
    action 'LCURLY' (noprec):   reduce expression --> highPriorityFunction
    action 'RCURLY' (noprec):   reduce expression --> highPriorityFunction
    action 'EXCL' (explicit right 9995):   shift 17
    action 'CARET' (noprec):   reduce expression --> highPriorityFunction
    action 'EQ' (noprec):   reduce expression --> highPriorityFunction
    action 'UNDERSCORE' (noprec):   reduce expression --> highPriorityFunction
    action 'SLASH' (noprec):   reduce expression --> highPriorityFunction
    action 'COMMA' (noprec):   reduce expression --> highPriorityFunction
    action 'MREFVAL' (noprec):   reduce expression --> highPriorityFunction
    action 'SREFVAL' (noprec):   reduce expression --> highPriorityFunction
    action 'ID' (noprec):   reduce expression --> highPriorityFunction
    action 'DIFF' (noprec):   reduce expression --> highPriorityFunction
    action 'FLOAT' (noprec):   reduce expression --> highPriorityFunction
    action 'INT' (noprec):   reduce expression --> highPriorityFunction
    action 'error' (noprec):   reduce expression --> highPriorityFunction
    action '#' (noprec):   reduce expression --> highPriorityFunction
    action '$$' (noprec):   reduce expression --> highPriorityFunction

  immediate action: <none>
 gotos:

state 6:
  items:
    constant -> 'PI' . 

  actions:
    action 'EOF' (explicit left 9991):   reduce constant --> 'PI'
    action 'PI' (explicit left 9991):   reduce constant --> 'PI'
    action 'EULERNUM' (explicit left 9991):   reduce constant --> 'PI'
    action 'FRAC' (explicit left 9991):   reduce constant --> 'PI'
    action 'SQRT' (explicit left 9991):   reduce constant --> 'PI'
    action 'SUM' (explicit left 9991):   reduce constant --> 'PI'
    action 'PROD' (explicit left 9991):   reduce constant --> 'PI'
    action 'INTEGRAL' (explicit left 9991):   reduce constant --> 'PI'
    action 'TIMES' (explicit left 9991):   reduce constant --> 'PI'
    action 'INFTY' (explicit left 9991):   reduce constant --> 'PI'
    action 'TO' (explicit left 9991):   reduce constant --> 'PI'
    action 'LIM' (explicit left 9991):   reduce constant --> 'PI'
    action 'BMOD' (explicit left 9991):   reduce constant --> 'PI'
    action 'TEXT' (explicit left 9991):   reduce constant --> 'PI'
    action 'SIN' (explicit left 9991):   reduce constant --> 'PI'
    action 'COS' (explicit left 9991):   reduce constant --> 'PI'
    action 'PLUS' (explicit left 9991):   reduce constant --> 'PI'
    action 'SUB' (explicit left 9991):   reduce constant --> 'PI'
    action 'MUL' (explicit left 9991):   reduce constant --> 'PI'
    action 'DIV' (explicit left 9991):   reduce constant --> 'PI'
    action 'LPAREN' (explicit left 9991):   reduce constant --> 'PI'
    action 'RPAREN' (explicit left 9991):   reduce constant --> 'PI'
    action 'LCURLY' (explicit left 9991):   reduce constant --> 'PI'
    action 'RCURLY' (explicit left 9991):   reduce constant --> 'PI'
    action 'EXCL' (explicit left 9991):   reduce constant --> 'PI'
    action 'CARET' (explicit left 9991):   reduce constant --> 'PI'
    action 'EQ' (explicit left 9991):   reduce constant --> 'PI'
    action 'UNDERSCORE' (explicit left 9991):   reduce constant --> 'PI'
    action 'SLASH' (explicit left 9991):   reduce constant --> 'PI'
    action 'COMMA' (explicit left 9991):   reduce constant --> 'PI'
    action 'MREFVAL' (explicit left 9991):   reduce constant --> 'PI'
    action 'SREFVAL' (explicit left 9991):   reduce constant --> 'PI'
    action 'ID' (explicit left 9991):   reduce constant --> 'PI'
    action 'DIFF' (explicit left 9991):   reduce constant --> 'PI'
    action 'FLOAT' (explicit left 9991):   reduce constant --> 'PI'
    action 'INT' (explicit left 9991):   reduce constant --> 'PI'
    action 'error' (explicit left 9991):   reduce constant --> 'PI'
    action '#' (explicit left 9991):   reduce constant --> 'PI'
    action '$$' (explicit left 9991):   reduce constant --> 'PI'

  immediate action:   reduce constant --> 'PI'
 gotos:

state 7:
  items:
    constant -> 'EULERNUM' . 

  actions:
    action 'EOF' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'PI' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'EULERNUM' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'FRAC' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SQRT' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SUM' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'PROD' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'INTEGRAL' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'TIMES' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'INFTY' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'TO' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'LIM' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'BMOD' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'TEXT' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SIN' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'COS' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'PLUS' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SUB' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'MUL' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'DIV' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'LPAREN' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'RPAREN' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'LCURLY' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'RCURLY' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'EXCL' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'CARET' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'EQ' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'UNDERSCORE' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SLASH' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'COMMA' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'MREFVAL' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'SREFVAL' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'ID' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'DIFF' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'FLOAT' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'INT' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action 'error' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action '#' (explicit left 9991):   reduce constant --> 'EULERNUM'
    action '$$' (explicit left 9991):   reduce constant --> 'EULERNUM'

  immediate action:   reduce constant --> 'EULERNUM'
 gotos:

state 8:
  items:
    sumPrefix -> 'SLASH' . 'SUM'
    prodPrefix -> 'SLASH' . 'PROD'
    fracPrefix -> 'SLASH' . 'FRAC'
    integralPrefix -> 'SLASH' . 'INTEGRAL'
    refPattern -> 'SLASH' . 'TEXT' 'LCURLY' refValue 'RCURLY'
    highPriorityFunction -> 'SLASH' . 'INFTY'
    sinPrefix -> 'SLASH' . 'SIN'
    cosPrefix -> 'SLASH' . 'COS'
    errorRule -> 'SLASH' . 'ID' arguments
    errorRule -> 'SLASH' . 'ID'
    errorRule -> 'SLASH' . recover arguments
    errorRule -> 'SLASH' . recover
    errorRule -> 'SLASH' . 

  actions:
    action 'EOF' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'PI' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'EULERNUM' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'FRAC' (noprec):   shift 21
    action 'SQRT' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'SUM' (noprec):   shift 9
    action 'PROD' (noprec):   shift 13
    action 'INTEGRAL' (noprec):   shift 27
    action 'TIMES' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'INFTY' (noprec):   shift 50
    action 'TO' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'LIM' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'BMOD' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'TEXT' (noprec):   shift 42
    action 'SIN' (noprec):   shift 65
    action 'COS' (noprec):   shift 67
    action 'PLUS' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'SUB' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'MUL' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'DIV' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'LPAREN' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'RPAREN' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'LCURLY' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'RCURLY' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'EXCL' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'CARET' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'EQ' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'UNDERSCORE' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'SLASH' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'COMMA' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'MREFVAL' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'SREFVAL' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'ID' (explicit left 9992):   shift 120
    action 'DIFF' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'FLOAT' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'INT' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action 'error' (noprec):   shift 115
    action '#' (explicit right 9990):   reduce errorRule --> 'SLASH'
    action '$$' (explicit right 9990):   reduce errorRule --> 'SLASH'

  immediate action: <none>
 gotos:
    goto recover: 122

state 9:
  items:
    sumPrefix -> 'SLASH' 'SUM' . 

  actions:
    action 'EOF' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'PI' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'EULERNUM' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'FRAC' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SQRT' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SUM' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'PROD' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'INTEGRAL' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'TIMES' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'INFTY' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'TO' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'LIM' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'BMOD' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'TEXT' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SIN' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'COS' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'PLUS' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SUB' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'MUL' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'DIV' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'LPAREN' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'RPAREN' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'LCURLY' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'RCURLY' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'EXCL' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'CARET' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'EQ' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'UNDERSCORE' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SLASH' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'COMMA' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'MREFVAL' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'SREFVAL' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'ID' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'DIFF' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'FLOAT' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'INT' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action 'error' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action '#' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'
    action '$$' (noprec):   reduce sumPrefix --> 'SLASH' 'SUM'

  immediate action:   reduce sumPrefix --> 'SLASH' 'SUM'
 gotos:

state 10:
  items:
    sumPrefix -> 'SUM' . 

  actions:
    action 'EOF' (noprec):   reduce sumPrefix --> 'SUM'
    action 'PI' (noprec):   reduce sumPrefix --> 'SUM'
    action 'EULERNUM' (noprec):   reduce sumPrefix --> 'SUM'
    action 'FRAC' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SQRT' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SUM' (noprec):   reduce sumPrefix --> 'SUM'
    action 'PROD' (noprec):   reduce sumPrefix --> 'SUM'
    action 'INTEGRAL' (noprec):   reduce sumPrefix --> 'SUM'
    action 'TIMES' (noprec):   reduce sumPrefix --> 'SUM'
    action 'INFTY' (noprec):   reduce sumPrefix --> 'SUM'
    action 'TO' (noprec):   reduce sumPrefix --> 'SUM'
    action 'LIM' (noprec):   reduce sumPrefix --> 'SUM'
    action 'BMOD' (noprec):   reduce sumPrefix --> 'SUM'
    action 'TEXT' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SIN' (noprec):   reduce sumPrefix --> 'SUM'
    action 'COS' (noprec):   reduce sumPrefix --> 'SUM'
    action 'PLUS' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SUB' (noprec):   reduce sumPrefix --> 'SUM'
    action 'MUL' (noprec):   reduce sumPrefix --> 'SUM'
    action 'DIV' (noprec):   reduce sumPrefix --> 'SUM'
    action 'LPAREN' (noprec):   reduce sumPrefix --> 'SUM'
    action 'RPAREN' (noprec):   reduce sumPrefix --> 'SUM'
    action 'LCURLY' (noprec):   reduce sumPrefix --> 'SUM'
    action 'RCURLY' (noprec):   reduce sumPrefix --> 'SUM'
    action 'EXCL' (noprec):   reduce sumPrefix --> 'SUM'
    action 'CARET' (noprec):   reduce sumPrefix --> 'SUM'
    action 'EQ' (noprec):   reduce sumPrefix --> 'SUM'
    action 'UNDERSCORE' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SLASH' (noprec):   reduce sumPrefix --> 'SUM'
    action 'COMMA' (noprec):   reduce sumPrefix --> 'SUM'
    action 'MREFVAL' (noprec):   reduce sumPrefix --> 'SUM'
    action 'SREFVAL' (noprec):   reduce sumPrefix --> 'SUM'
    action 'ID' (noprec):   reduce sumPrefix --> 'SUM'
    action 'DIFF' (noprec):   reduce sumPrefix --> 'SUM'
    action 'FLOAT' (noprec):   reduce sumPrefix --> 'SUM'
    action 'INT' (noprec):   reduce sumPrefix --> 'SUM'
    action 'error' (noprec):   reduce sumPrefix --> 'SUM'
    action '#' (noprec):   reduce sumPrefix --> 'SUM'
    action '$$' (noprec):   reduce sumPrefix --> 'SUM'

  immediate action:   reduce sumPrefix --> 'SUM'
 gotos:

state 11:
  items:
    sum -> sumPrefix . arguments
    sum -> sumPrefix . 
